Added answer to question 2 on Haar cascades.

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -300,6 +300,8 @@
     "\n",
     "__Answer:__\n",
     "\n",
+    "I think it is a reasonable expectation. Many applications that perform image processing set user expectations on image quality and clarity (example: banking application for taking a photo of a check for deposit). We still might work to improve the performance of the application by applying transformations (example: blur, transitions, etc) to our data set to improve detection with low quality images. \n",
+    "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
   },
